Changes 405 status codes to 400 where applicable
